--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,5 +19,9 @@
     margin: 10px;
     padding: 10px 80% 10px 30px;
     color: darkgray;
-    font-style: italic;
+    font-style: italic;    
+}
+
+.none {
+    display: none;
 }
